--- a/src/sass/_base-styles.scss
+++ b/src/sass/_base-styles.scss
@@ -19,3 +19,14 @@ ol {
 img {
   display: block;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
