--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,8 +1,17 @@
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .photo-card {
-  max-width: 280px;
+  width: 280px;
+
+  margin-top: 30px;
+  margin-left: 30px;
 
   & > img {
-    max-width: 100%;
+    width: 280px;
+    height: 200px;
   }
 }
 
