--- a/src/sass/_base-styles.scss
+++ b/src/sass/_base-styles.scss
@@ -20,6 +20,11 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -29,9 +34,4 @@ img {
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-a {
-  text-decoration: none;
-  color: coral;
 }
