--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -26,3 +26,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+.load-more {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 3px;
+  cursor: pointer;
+}
