--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,17 +1,18 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
 
 .photo-card {
-  width: 280px;
-
-  margin-top: 30px;
-  margin-left: 30px;
+  width: 350px;
 
   & > img {
-    width: 280px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     object-fit: cover;
   }
 }
