--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -2,21 +2,25 @@
   display: flex;
   justify-content: center;
 
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 
   background-color: #4056b4;
 }
 
 .search-form__input {
   margin-right: 5px;
-  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 3px;
 }
 
 .search-form__button {
+  padding: 10px 20px;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 3px;
 
