--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -17,7 +17,6 @@
 
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 5px 10px 2px;
 
   & > img {
     width: 350px;
@@ -29,6 +28,8 @@
 .info {
   display: flex;
   justify-content: space-between;
+
+  padding: 10px 10px;
 }
 
 .info-item {
