--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -10,6 +10,14 @@
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc((100% - 150px) / 5);
+
+  transition-property: transform;
+  transition-duration: 0.3s;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
+  }
 }
 
 .photo-card {
