--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -144,6 +144,7 @@ a {
 }
 
 .load-more {
+  padding: 10px 20px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 3px;
   cursor: pointer;
