--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -149,4 +149,9 @@ a {
   border-radius: 3px;
   cursor: pointer;
 }
+
+.section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 /*# sourceMappingURL=main.css.map */
