--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -30,6 +30,9 @@
     width: 350px;
     height: 250px;
     object-fit: cover;
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 }
 
