--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -50,10 +50,100 @@
   align-items: center;
 }
 
-.load-more {
-  padding: 10px 20px;
+// .load-more {
+//   // position: relative;
+//   // display: inline-block;
+//   // padding: 5px 5px;
+//   // margin: 5px;
+//   // text-decoration: none;
+//   // font-family: 'Comfortaa', cursive;
+//   // font-size: 14px;
+//   // text-transform: uppercase;
+//   // font-weight: bold;
+//   // color: #4056b4;
+//   // border: 2px solid #4056b4;
+//   // transition: 0.4s linear;
+//   // cursor: pointer;
 
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 3px;
+//   // &::after {
+//   //   content: '';
+//   //   position: absolute;
+//   //   left: 50%;
+//   //   top: 50%;
+//   //   height: 130%;
+//   //   width: 91%;
+//   //   border: 2px solid #4056b4;
+//   //   transform: translate(-50%, -50%);
+//   //   z-index: -1;
+//   // }
+
+//   // &:hover {
+//   //   background: #4056b4;
+//   //   color: #ffffff;
+//   // }
+// }
+
+.button-wrapper {
+  max-width: 400px;
+  margin: 50px auto;
+  text-align: center;
+  overflow: hidden;
+}
+.arrow-btn {
+  position: relative;
+  display: inline-block;
+  padding: 7px 10px;
+  text-decoration: none;
+  color: #4056b4;
+  border: 4px solid #4056b4;
+  border-radius: 4px;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  transition: 0.2s;
+  transition-delay: 0.1s;
   cursor: pointer;
+}
+.arrow-btn:hover {
+  padding: 10px 15px;
+}
+.arrow-btn span {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  z-index: -1;
+  overflow: hidden;
+  transition: 0.35s cubic-bezier(0.215, 0.61, 0.215, 1);
+}
+.arrow-btn span:before {
+  content: '';
+  position: absolute;
+  top: -5%;
+  left: -210%;
+  width: 200%;
+  height: 108%;
+  background: #4056b4;
+  transform: skew(-15deg, 0);
+  transition: 0.5s;
+}
+.arrow-btn:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: -1000%;
+  height: 2px;
+  margin-top: -1px;
+  width: 400%;
+  background: #4056b4;
+  transition: 0.5s;
+}
+.arrow-btn:hover:after {
+  width: 140%;
+  left: -20%;
+}
+.arrow-btn:hover span:before {
+  left: -25%;
 }
