--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -29,17 +29,6 @@ a {
   color: #000000;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .search-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,10 +51,25 @@ a {
 }
 
 .search-form__button {
-  padding: 10px 20px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 3px;
+  position: relative;
+  display: inline-block;
+  padding: 10px 10px;
+  text-decoration: none;
+  color: #4056b4;
+  border: 4px solid #7ea7d7;
+  border-radius: 4px;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
   cursor: pointer;
+}
+
+.search-form__button:hover {
+  padding: 10px 15px;
 }
 
 .button-wrapper {
@@ -85,6 +89,9 @@ a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: -15px;
   margin-left: -15px;
 }
@@ -118,6 +125,8 @@ a {
   height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .info {
@@ -143,14 +152,96 @@ a {
           align-items: center;
 }
 
-.load-more {
-  padding: 10px 20px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 3px;
+.button-wrapper {
+  max-width: 400px;
+  margin: 50px auto;
+  text-align: center;
+  overflow: hidden;
+}
+
+.arrow-btn {
+  position: relative;
+  display: inline-block;
+  padding: 7px 10px;
+  text-decoration: none;
+  color: #4056b4;
+  border: 4px solid #4056b4;
+  border-radius: 4px;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
   cursor: pointer;
+}
+
+.arrow-btn:hover {
+  padding: 10px 15px;
+}
+
+.arrow-btn span {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  z-index: -1;
+  overflow: hidden;
+  -webkit-transition: 0.35s cubic-bezier(0.215, 0.61, 0.215, 1);
+  transition: 0.35s cubic-bezier(0.215, 0.61, 0.215, 1);
+}
+
+.arrow-btn span:before {
+  content: '';
+  position: absolute;
+  top: -5%;
+  left: -210%;
+  width: 200%;
+  height: 108%;
+  background: #4056b4;
+  -webkit-transform: skew(-15deg, 0);
+          transform: skew(-15deg, 0);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.arrow-btn:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: -1000%;
+  height: 2px;
+  margin-top: -1px;
+  width: 400%;
+  background: #4056b4;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.arrow-btn:hover:after {
+  width: 140%;
+  left: -20%;
+}
+
+.arrow-btn:hover span:before {
+  left: -25%;
 }
 
 .section {
   padding: 20px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /*# sourceMappingURL=main.css.map */
